Enable JDK25 compact headers JVM flag for launch configs/scripts
Added "-XX:+UseCompactObjectHeaders" to launch configs for apps and test

444796